main.css
/* Hubot Sans is licensed under the SIL Open Font License v1.1 from GitHub (https://github.com/github/hubot-sans) */

@font-face {
  font-family: 'Hubot Sans';
  src:
	url('Hubot-Sans.woff2') format('woff2 supports variations'),
	url('Hubot-Sans.woff2') format('woff2-variations');
  font-weight: 200 900;
  font-stretch: 75% 125%;
}

/* Properties for the entire site */
:root {
	font-family: 'Hubot Sans', sans-serif;
	max-width: 900px;
	margin: auto;
	line-height: 1.7;
}

/* Center and add margins to all headings and paragraphs */
h1, h2, h3, p {
	text-align: center;
}

h1 {
	font-size: 3rem;
	font-style: italic;
}

h2 {
	font-size: 2rem;
}

h3 {
	font-size: 1.75rem;
}

li, p {
	font-size: 1.25rem;
}

/* Properties for the entire links section */
.links {
	max-width: 60vw;
	display: flex;
	flex-wrap: wrap;
	margin: 1em auto;
	justify-content: center;
	gap: 0.4rem;
}

/* Properties for each individual link */
.links a {
	font-size: 1.75rem;
	width: 25vw;
	text-align: center;
	color: white;
	background-color: #523bc4;
	border-radius: 20px;
	padding: 5px;
	text-decoration: none;
}

.links a.github {
	background-color: black;
}

a.imessage {
	background-color: #387df6;
}

.links a.email {
	background-color: #EA4335;
}

/* Properties for the icon inside of each link */
.links a svg {
	padding-right: .3rem;
}

/* Display a solid black outline when selecting links using the tab key */
a:focus-visible {
	outline: 4px solid black;
}

.avatar {
	display: block;
	margin: 1em auto;
	max-width: 15em;
	height: auto;
	object-fit: scale-down;
}

.PublicKeySection {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-wrap: wrap;
}

.CopyKeyButton {
	margin-left: 10px;
	align-items: center;
	background-color: #0A66C2;
	border: 0;
	border-radius: 100px;
	box-sizing: border-box;
	color: #ffffff;
	cursor: pointer;
	display: inline-flex;
	font: inherit;
	padding-left: 20px;
	padding-right: 20px;
	text-align: center;
	touch-action: manipulation;
	transition: background-color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, box-shadow 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s, color 0.167s cubic-bezier(0.4, 0, 0.2, 1) 0s;
	vertical-align: middle;
}

.CopyKeyButton:hover,
.CopyKeyButton:focus { 
	background-color: #16437E;
	color: #ffffff;
}

.CopyKeyButton:active {
	background: #09223b;
	color: rgb(255, 255, 255, .7);
}

#iMessagePublicKey {
	padding: 10px;
	margin-top: -20px;
	border: 1px solid black;
	border-radius: 5px;
	user-select: none;
	font-size: 1.25rem;
	word-wrap: break-word;
}

/* Specify colors for dark mode */
@media (prefers-color-scheme: dark) {
	:root {
		background: #0c0c0c;
		color: white;
	}
	
	.links a {
		color: white;
	}

	.links a.github {
		color: black;
		background-color: white;
	}

	a {
		color: #ffcb00;
	}
	
	::selection {
		background: rgba(255, 203, 0, 0.5);
	}
	
	a:focus-visible {
		outline: 4px solid white;
	}
	
	#iMessagePublicKey {
		border-color: white;
	}
}

/* Properties for devices with screen width of 600px or lower */
@media (max-width: 600px) {
	img {
		width: 100%;
	}
	
	.contact {
		margin: 1rem 0;
	}
	
	.links {
		max-width: 100%;
	}
	
	.links a {
		width: 43vw;
	}
	
	.PublicKeySection {
		display: flex;
		flex-direction: column;
		align-items: center;
		text-align: center;
	}
		
	.iMessageHeading,
	.CopyKeyButton,
	#iMessagePublicKey {
		margin-top: 15px;
		margin-bottom: 0px;
		}
	}
	
	#iMessagePublicKey {
		width: 100%;
		padding: 5px;
	}

